--- a/.learn/resets/05-HTML-five-forms/style.css
+++ b/.learn/resets/05-HTML-five-forms/style.css
@@ -7,9 +7,9 @@ form {
 }
 
 fieldset {
-	border: 0;
+	border: none;
 	margin: 0;
-	padding: 10px 0px 10px 0px;
+	padding: 10px 0;
 	font-weight: 800;
 }
 
@@ -17,7 +17,10 @@ label {
 	font-weight: 400;
 }
 
-input[type="text"] {
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+input[type="url"] {
 	border: none;
 	border-bottom: 1px solid black;
 	font-size: 16px;
